Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71052

Service discovery agent fails to extract ServiceID and ServiceClassIDList (IOBluetooth, macOS)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12
    • 5.12
    • None
    • macOS 10.13, macOS 10.14, IOBluetooth
    • macOS
    • c9ed3c49e3884ffad899d7ae28b2480691824228

    Description

      Apparently, never worked properly and was not noticed only because I was using FullDiscovery (with/out uuid filtering).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes